finish profile design

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
   align-items: center;
   height: 100vh;
   width: 100%;
-  background-color: antiquewhite;
+  background-color: rgb(241, 236, 228);
 }
 .left {
   width: 50%;
