--- a/style.css
+++ b/style.css
@@ -82,6 +82,68 @@
   font-size: 1.5rem;
   font-weight: 900;
   margin: 0px 0px 0px 20px;
+  text-align: center;
+}
+.right h4 {
+  font-size: 1.1rem;
+  line-height: 2rem;
+  font-weight: 900;
+  margin-top: 30px;
+  margin-left: 20px;
+}
+.right span {
+  color: tomato;
+}
+.right p {
+  margin-top: 0px;
+  font-size: .7rem;
+  line-height: 1.1rem;
+  width: 300px;
+  text-align: justify;
+  margin: 0 auto;
+}
+.right button {
+  margin: 40px 0px 0px 20px;
+  padding: 6px 14px;
+  font-size: .8rem;
+  border-radius: 9px;
+  border: none;
+  background: rgb(2, 0, 36);
+  background: linear-gradient(
+    90deg,
+    rgba(2, 0, 36, 1) 0%,
+    rgba(210, 54, 5, 1) 0%,
+    rgba(244, 210, 92, 1) 100%
+  );
+}
+}
+@media  screen and (max-width:370px) {
+  
+#hero {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: 100vh;
+  width: 100%;
+  background-color: rgb(241, 236, 228);
+}
+.left {
+  width: 100%;
+  text-align: center;
+}
+.left img {
+  width: 300px;
+  margin:  0 auto;
+}
+.right {
+  width: 100%;
+  padding: 30px;
+}
+.right h2 {
+  font-size: 1.5rem;
+  font-weight: 900;
+  margin: 0px 0px 0px 20px;
 }
 .right h4 {
   font-size: 1.1rem;
@@ -113,5 +175,4 @@
     rgba(210, 54, 5, 1) 0%,
     rgba(244, 210, 92, 1) 100%
   );
-}
 }
