--- a/style.css
+++ b/style.css
@@ -176,3 +176,68 @@
     rgba(244, 210, 92, 1) 100%
   );
 }
+}
+
+@media screen and (max-width:768px) and (min-width:600px){
+  
+  #hero {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: 100vh;
+    width: 100%;
+    background-color: rgb(241, 236, 228);
+  }
+  .left {
+    width: 100%;
+    text-align: center;
+  }
+  .left img {
+    width: 500px;
+    margin: 0 auto;
+  }
+  .right {
+    width: 100%;
+    padding: 30px;
+  }
+  .right h2 {
+    font-size: 1.8rem;
+    font-weight: 900;
+    margin: 0px 0px 0px 20px;
+    text-align: center;
+    margin-bottom: 30px;
+  }
+  .right h4 {
+    font-size: 1.3rem;
+    line-height: 2rem;
+    font-weight: 900;
+    width: 500px;
+    text-align: justify;
+    margin: 0 auto;
+  }
+  .right span {
+    color: tomato;
+  }
+  .right p {
+    margin-top: 0px;
+    font-size: .8rem;
+    line-height: 1.1rem;
+    width: 500px;
+    text-align: justify;
+    margin: 20px auto;
+  }
+  .right button {
+    margin: 40px 0px 0px 109px;
+    padding: 6px 14px;
+    font-size: .8rem;
+    border-radius: 9px;
+    border: none;
+    background: rgb(2, 0, 36);
+    background: linear-gradient(
+      90deg,
+      rgba(2, 0, 36, 1) 0%,
+      rgba(210, 54, 5, 1) 0%,
+      rgba(244, 210, 92, 1) 100%
+    );
+  }
